--- a/application/layouts/inner.phtml
+++ b/application/layouts/inner.phtml
@@ -10,7 +10,7 @@
 <!-- /header -->
 
 <!-- container -->
-<div id="ng_container" class="clearfix contato">
+<div id="container" class="clearfix contato">
 
 <!-- breadcrumb -->
 <div id="breadcrumb_biografia">
