--- a/application/layouts/inner_admin.phtml
+++ b/application/layouts/inner_admin.phtml
@@ -11,7 +11,7 @@
 <!-- /header -->
 
 <!-- container -->
-<div id="ng_container" class="clearfix admin">
+<div id="container" class="clearfix admin">
 
 <!-- breadcrumb -->
 <div id="breadcrumb_livros">
@@ -27,3 +27,11 @@
 
 </div>
 <!-- /container -->
+
+<!-- rodape -->
+<br /><br /><br />
+<div title="" id="admin_rodape_container" class="clearfix" style="background:url(/img/personagens/livros.png) bottom center no-repeat">
+<?php echo $this->action('footer', 'include', 'includes') ?>
+</div>
+
+<!-- /rodape -->
