--- a/application/layouts/inner_home.phtml
+++ b/application/layouts/inner_home.phtml
@@ -10,7 +10,7 @@
 <!-- /header -->
 
 <!-- container -->
-<div id="ng_container" class="clearfix">
+<div id="container" class="clearfix">
 
 
 <!-- destaque -->
