--- a/application/layouts/inner_novidades.phtml
+++ b/application/layouts/inner_novidades.phtml
@@ -11,7 +11,7 @@
 
 
 <!-- container -->
-<div id="ng_container" class="clearfix novidades">
+<div id="container" class="clearfix novidades">
 
 <!-- breadcrumb -->
 <div id="breadcrumb_novidades">
