--- a/application/modules/admin/views/scripts/index/list-works.phtml
+++ b/application/modules/admin/views/scripts/index/list-works.phtml
@@ -35,7 +35,7 @@ $(function() {
 
 
 <!-- conteudo -->
-<div id="leg_conteudo">
+<div id="conteudo">
     <a href="/">teste</a>
 <h1><?php echo $this->translate("#List of works") ?></h1>
 <div id="rod_container" style="width:800px; margin:0 auto;">
