--- a/application/modules/auth/views/scripts/login/index.phtml
+++ b/application/modules/auth/views/scripts/login/index.phtml
@@ -1,5 +1,7 @@
 <!-- conteudo -->
 <div id="conteudo">
-<?php echo $this->form; ?>
+    <div id="login_form">
+        <?php echo $this->form; ?>
+    </div>
 </div>
 <!-- /conteudo -->
