--- a/application/modules/includes/views/scripts/include/header-login.phtml
+++ b/application/modules/includes/views/scripts/include/header-login.phtml
@@ -2,7 +2,9 @@
 <div id="topo" class="clearfix">
 
 <!-- logo -->
-<a href="/home" title="<?php echo $this->translate("#Home") ?>"><img src="/img/logo.png" alt="Ruth Rocha" /></a>
+<div id="logo">
+	<a href="/home" title="Home"><img src="/img/logo.png" alt="Ruth Rocha" /></a>
+</div>
 <!-- /logo -->
 
 <!-- menu -->
