--- a/application/layouts/inner_biografia.phtml
+++ b/application/layouts/inner_biografia.phtml
@@ -10,7 +10,7 @@
 <!-- /header -->
 
 <!-- container -->
-<div id="ng_container" class="clearfix contato">
+<div id="container" class="clearfix contato">
 
 <!-- breadcrumb -->
 <div id="breadcrumb_biografia">
@@ -32,7 +32,7 @@
 <!-- /container -->
 <!-- rodape -->
 <br /><br /><br />
-<div title="" id="rodape_container" class="clearfix" style="background:url(../img/personagens/biografia.png) bottom center no-repeat">
+<div title="" id="rodape_container" class="clearfix" style="background:url(/img/personagens/biografia.png) bottom center no-repeat">
 <?php echo $this->action('footer', 'include', 'includes') ?>
 </div>
 <!-- /rodape -->
