--- a/application/layouts/inner_books.phtml
+++ b/application/layouts/inner_books.phtml
@@ -10,7 +10,7 @@
 <!-- /header -->
 
 <!-- container -->
-<div id="ng_container" class="clearfix contato">
+<div id="container" class="clearfix livros">
 
 <!-- breadcrumb -->
 <div id="breadcrumb_livros">
