--- a/application/layouts/wrapper.phtml
+++ b/application/layouts/wrapper.phtml
@@ -10,7 +10,7 @@
 <link rel="stylesheet" href="/css/bjqs.css" type="text/css" media="screen" />
 <link rel="stylesheet" href="/css/destaque.css" type="text/css" media="screen" />
 
-<script type="text/javascript" src="/js/jquery-1.5.min.js"></script>
+<script src="/js/jquery-1.10.2.js"></script>
 <script src="/js/bjqs-1.3.min.js"></script>
 
 
