--- a/application/modules/includes/views/scripts/include/header.phtml
+++ b/application/modules/includes/views/scripts/include/header.phtml
@@ -9,10 +9,10 @@
 
 <!-- menu -->
 <ul id="menu">
-	<li><a href="/livros" title="Livros" id="menu_livros">Livros</a></li>
-    <li><a href="/novidades" title="Novidades" id="menu_novidades">Novidades</a></li>
-    <li><a href="/biografia" title="Biografia" id="menu_biografia">Biografia</a></li>
-    <li><a href="/contato" title="Contato" id="menu_contato">Contato</a></li>
+    <li><a href="/livros" title="<?php echo $this->translate("#Books") ?>" id="menu_livros"><?php echo $this->translate("#Books") ?></a></li>
+    <li><a href="/novidades" title="<?php echo $this->translate("#News") ?>" id="menu_novidades"><?php echo $this->translate("#News") ?></a></li>
+    <li><a href="/biografia" title="<?php echo $this->translate("#Biography") ?>" id="menu_biografia"><?php echo $this->translate("#Biography") ?></a></li>
+    <li><a href="/contato" title="<?php echo $this->translate("#Contact") ?>" id="menu_contato" style="padding-right:0;"><?php echo $this->translate("#Contact") ?></a></li>
 </ul>
 <!-- /menu -->
 
