--- a/public/css/estilo.css
+++ b/public/css/estilo.css
@@ -56,7 +56,7 @@ body {
 	margin:0 0 0 -65px;
 	}*/
 
-#ng_container {
+#container {
 	width:990px;
 	margin:0 auto 0;
 	/*margin:0 0 -40px -65px;*/
@@ -291,6 +291,15 @@ h4 {
 	width:250px;
 	height:auto;
 	}
+
+
+#conteudo a.thumbnail_livro img {
+	width:100px;
+	height:auto;
+	border:2px solid #fff9cb;
+	}
+
+
 
 .box {
 	width:240px;
@@ -796,4 +805,53 @@ div.dataTables_filter {
 
 }
 
+#admin_rodape_container {
+	clear:both;
+	width:100%;
+	height:333px;
+/*	position:absolute;*/
+	z-index:0;
+	bottom:0;
+	}
 
+#login_form {
+	width:616px;
+	padding:25px 65px;
+	margin:0 auto 0;
+
+}
+
+/* PAINEL */
+.panel {
+	clear:both;
+	height:87px;
+	width:960px;
+	padding:30px 20px 0 20px;
+	font-size:12px;
+        margin-left: 80px;
+	}
+
+.panel a {
+	font-weight:bold;
+	}
+
+.panel span {
+	text-transform:uppercase;
+	}
+
+.panel p {
+	margin-bottom:10px;
+	}
+
+.panel li {
+	margin:0 0 5px 0;
+	}
+
+
+.box_panel {
+	width:170px;
+	margin:0 0 0 20px;
+	height:70px;
+	float:left;
+	display:block;
+	}
