--- a/application/layouts/meta.phtml
+++ b/application/layouts/meta.phtml
@@ -7,7 +7,7 @@
 <meta name="googlebot" content="ALL" />
 <meta name="keywords" content="...,..." />
 <meta name="description" content="..." />
-<meta name="author" content="NewGosling.com" />
+<meta name="author" content="Além Disso" />
 <meta name="google" content="notranslate" />
 <link rel="shortcut icon" href="/img/favicon.ico" type="image/x-icon" />
 <link rel="icon" href="/img/favicon.ico" type="image/x-icon" />
