--- a/application/layouts/inner_books.phtml
+++ b/application/layouts/inner_books.phtml
@@ -14,7 +14,7 @@
 
 <!-- breadcrumb -->
 <div id="breadcrumb_livros">
-<a href="/home" title="Home">Home</a> &rsaquo; Livros
+<?php echo $this->navigation()->breadcrumbs()->setLinkLast(false)->setMinDepth(0)->render(); ?>
 </div>
 <!-- /breadcrumb -->
 
