--- a/application/modules/works/views/scripts/index/index.phtml
+++ b/application/modules/works/views/scripts/index/index.phtml
@@ -7,43 +7,7 @@ $pageData = $this->pageData;
 <h1>Livros</h1>
 
 <table id="livros" width="580px">
-
-<tr>
-	<td width="100px"><a href="" alt="Titulo do Livro"><img src="img/marcacao_livro.jpg" alt="Titulo do Livro" style="width:40px" /></a></td>
-    <td width="20px">&nbsp;</td>
-    <td width="100px"><a href="" alt="Titulo do Livro"><img src="img/marcacao_livro.jpg" alt="Titulo do Livro" style="height:40px" /></a></td>
-    <td width="20px">&nbsp;</td>
-    <td width="100px"><a href="" alt="Titulo do Livro"><img src="img/marcacao_livro.jpg" alt="Titulo do Livro" /></a></td>
-    <td width="20px">&nbsp;</td>
-    <td width="100px"><a href="" alt="Titulo do Livro"><img src="img/marcacao_livro.jpg" alt="Titulo do Livro" /></a></td>
-    <td width="20px">&nbsp;</td>
-    <td width="100px"><a href="" alt="Titulo do Livro"><img src="img/marcacao_livro.jpg" alt="Titulo do Livro" /></a></td>
-</tr>
-<tr height="20px">&nbsp;</tr>
-<tr>
-	<td width="100px"><a href="" alt="Titulo do Livro"><img src="img/marcacao_livro.jpg" alt="Titulo do Livro" /></a></td>
-    <td width="20px">&nbsp;</td>
-    <td width="100px"><a href="" alt="Titulo do Livro"><img src="img/marcacao_livro.jpg" alt="Titulo do Livro" /></a></td>
-    <td width="20px">&nbsp;</td>
-    <td width="100px"><a href="" alt="Titulo do Livro"><img src="img/marcacao_livro.jpg" alt="Titulo do Livro" /></a></td>
-    <td width="20px">&nbsp;</td>
-    <td width="100px"><a href="" alt="Titulo do Livro"><img src="img/marcacao_livro.jpg" alt="Titulo do Livro" /></a></td>
-    <td width="20px">&nbsp;</td>
-    <td width="100px"><a href="" alt="Titulo do Livro"><img src="img/marcacao_livro.jpg" alt="Titulo do Livro" /></a></td>
-</tr>
-<tr height="20px">&nbsp;</tr>
-<tr>
-	<td width="100px"><a href="" alt="Titulo do Livro"><img src="img/marcacao_livro.jpg" alt="Titulo do Livro" style="width:40px" /></a></td>
-    <td width="20px">&nbsp;</td>
-    <td width="100px"><a href="" alt="Titulo do Livro"><img src="img/marcacao_livro.jpg" alt="Titulo do Livro" style="height:40px" /></a></td>
-    <td width="20px">&nbsp;</td>
-    <td width="100px"><a href="" alt="Titulo do Livro"><img src="img/marcacao_livro.jpg" alt="Titulo do Livro" /></a></td>
-    <td width="20px">&nbsp;</td>
-    <td width="100px"><a href="" alt="Titulo do Livro"><img src="img/marcacao_livro.jpg" alt="Titulo do Livro" /></a></td>
-    <td width="20px">&nbsp;</td>
-    <td width="100px"><a href="" alt="Titulo do Livro"><img src="img/marcacao_livro.jpg" alt="Titulo do Livro" /></a></td>
-</tr>
-
+    <?php echo $this->editionsRows($pageData['editionsModel']) ?></tr>
 </table>
 
 </div>
