--- a/application/layouts/inner_books.phtml
+++ b/application/layouts/inner_books.phtml
@@ -32,7 +32,7 @@
 <!-- /container -->
 <!-- rodape -->
 <br /><br /><br />
-<div title="" id="rodape_container" class="clearfix" style="background:url(../img/personagens/livros.png) bottom center no-repeat">
+<div title="" id="rodape_container" class="clearfix" style="background:url(/img/personagens/livros.png) bottom center no-repeat">
 <?php echo $this->action('footer', 'include', 'includes') ?>
 </div>
 <!-- /rodape -->
