--- a/application/layouts/inner_contato.phtml
+++ b/application/layouts/inner_contato.phtml
@@ -14,7 +14,7 @@
 
 <!-- breadcrumb -->
 <div id="breadcrumb_contato">
-<a href="/home" title="Home">Home</a> &rsaquo; <a href="/livros" title="Livros">Livros</a> &rsaquo; Menina Bonita do La&ccedil;o de Fita
+<?php echo $this->navigation()->breadcrumbs()->setLinkLast(false)->setMinDepth(0)->render(); ?>
 </div>
 <!-- /breadcrumb -->
 
@@ -32,7 +32,7 @@
 <!-- /container -->
 <!-- rodape -->
 <br /><br /><br />
-<div title="" id="rodape_container" class="clearfix" style="background:url(../img/personagens/livros.png) bottom center no-repeat">
+<div title="" id="rodape_container" class="clearfix" style="background:url(/img/personagens/contato.png) bottom center no-repeat">
 <?php echo $this->action('footer', 'include', 'includes') ?>
 </div>
 <!-- /rodape -->
