--- a/application/modules/admin/views/scripts/work/detail.phtml
+++ b/application/modules/admin/views/scripts/work/detail.phtml
@@ -14,13 +14,14 @@ $pageData = $this->pageData;
     <p><?php echo $pageData['summary']?></p>
     <p> <a href="/admin/work/change-summary/?id=<?php echo $pageData['id'] ?>"><?php echo $this->translate("#(change summary)") ?></a></p>
 
+    <h3><?php echo $this->translate('#Theme')?></h2>
+    <p><?php echo $pageData['themeModel']['term']?></p>
+    <p><a href="/admin/work/change-theme/?id=<?php echo $pageData['id'] ?>"><?php echo $this->translate("#Change theme") ?></a></p>
+
     <h3><?php echo $this->translate('#Prizes')?></h2>
     <?php echo $this->prizesLoop($pageData['prizes']) ?>
     <p><a href="/admin/prize/create/?work=<?php echo $pageData['id'] ?>"><?php echo $this->translate("#Add prize") ?></a></p>
 
-    <h3><?php echo $this->translate('#Themes')?></h2>
-    <?php echo $this->themesLoop($pageData['themes']) ?>
-    <p><a href="#"><?php echo $this->translate("#Add theme") ?></a></p>
     <input type="hidden" name="id" value="<?php echo $pageData['id'] ?>" id="id">
 
     <h3><?php echo $this->translate('#Editions')?></h2>
