--- a/application/modules/works/views/scripts/index/index.phtml
+++ b/application/modules/works/views/scripts/index/index.phtml
@@ -7,7 +7,7 @@ $pageData = $this->pageData;
 <h1>Livros</h1>
 
 <?php
-    if (isset($pageData['themeData'])) {
+    if ((isset($pageData['themeData'])) && ($pageData['themeData']['term'])) {
         $themeData = $pageData['themeData'];
 ?>
 
@@ -18,10 +18,37 @@ $pageData = $this->pageData;
     }
 
 ?>
+<?php
+    if ((isset($pageData['typeData']['term'])) && ($pageData['typeData']['term'])) {
+        $typeData = $pageData['typeData'];
+?>
+
+<h2><?php echo $typeData['term'] ?></h2>
+
+
+<?php
+    }
+
+?>
+<?php
+    if ((is_array($pageData['editionsModel'])) && (count($pageData['editionsModel']))){
+
+?>
 
 <table id="livros" width="580px">
     <?php echo $this->editionsRows($pageData['editionsModel']) ?></tr>
 </table>
+<?php
+    } else {
+
+?>
+<h3>
+    <?php echo $this->translate("#There are no works with this criteria."); ?>
+</h3>
+<?php
+    }
+
+?>
 
 </div>
 <!-- /conteudo -->
