--- a/application/modules/admin/views/scripts/work/detail.phtml
+++ b/application/modules/admin/views/scripts/work/detail.phtml
@@ -18,6 +18,10 @@ $pageData = $this->pageData;
     <p><?php echo $pageData['themeModel']['term']?></p>
     <p><a href="/admin/work/change-theme/?id=<?php echo $pageData['id'] ?>"><?php echo $this->translate("#Change theme") ?></a></p>
 
+    <h3><?php echo $this->translate('#Characters')?></h2>
+    <?php echo $this->charactersLoop($pageData['characters']) ?>
+    <p><a href="/admin/work/create-character/?id=<?php echo $pageData['id'] ?>"><?php echo $this->translate("#Add character") ?></a></p>
+
     <h3><?php echo $this->translate('#Prizes')?></h2>
     <?php echo $this->prizesLoop($pageData['prizes']) ?>
     <p><a href="/admin/prize/create/?work=<?php echo $pageData['id'] ?>"><?php echo $this->translate("#Add prize") ?></a></p>
