--- a/application/modules/admin/views/scripts/work/characters-loop.phtml
+++ b/application/modules/admin/views/scripts/work/characters-loop.phtml
@@ -1,1 +1,1 @@
-<p><?php echo $this->term ?> <a href="/admin/work/remove-character/?object=<?php echo $this->id ?>"><?php echo $this->translate("#(remove)") ?></a></p>
+<p><?php echo $this->term ?> <a href="/admin/work/remove-character/?object=<?php echo $this->id ?>&term=<?php echo $this->termId ?>"><?php echo $this->translate("#(remove)") ?></a></p>
