fixing some little bugs

--- a/application/modules/admin/views/scripts/edition/change-cover.phtml
+++ b/application/modules/admin/views/scripts/edition/change-cover.phtml
@@ -1,4 +1,4 @@
           <div>
-            <h1><?php print($this->translate('#Change cover for %s')) ?></h1>
+            <h1><?php print(sprintf($this->translate('#Change cover for %s'), $this->pageData['title'])) ?></h1>
           </div>
 <?php echo $this->form; ?>
