filter editions by character

--- a/application/layouts/inner_admin.phtml
+++ b/application/layouts/inner_admin.phtml
@@ -21,6 +21,7 @@
 
 <!-- conteudo -->
 <div id="admin" class="clearfix">
+<?php echo $this->panel() ?>
 <?php echo $this->layout()->content; ?>
 </div>
 <!-- /conteudo -->
