--- a/application/modules/admin/views/scripts/work/detail.phtml
+++ b/application/modules/admin/views/scripts/work/detail.phtml
@@ -32,7 +32,7 @@ $pageData = $this->pageData;
 
     <input type="hidden" name="id" value="<?php echo $pageData['id'] ?>" id="id">
 
-    <h3><?php echo $this->translate('#Editions')?></h2>
+    <h3><?php echo $this->translate('#Editions.admin')?></h2>
     <?php if ((is_array($pageData['editions']))&&(count($pageData['editions']))) { ?>
     <?php echo $this->editionsLoop($pageData['editions']) ?>
     <?php } ?>
