path to route type

--- a/application/modules/works/views/scripts/edition/explore.phtml
+++ b/application/modules/works/views/scripts/edition/explore.phtml
@@ -9,10 +9,10 @@ $serieData = $pageData['serieData'];
 <!-- detalhes -->
 <div class="detalhe">
 <?php if ((isset($pageData['themeLabel'])) && ($pageData['themeLabel'])) { ?>
-<?php echo $this->translate('#Theme:') ?> <a href="<?php echo $this->translate('/theme/') ?><?php echo $pageData['themeUri'] ?>"><?php echo $pageData['themeLabel'] ?></a> <span>|</span>
+<?php echo $this->translate('#Theme:') ?> <a href="<?php echo $this->translate('/editions') ?><a href="<?php echo $this->translate('/theme') ?>/<?php echo $pageData['themeUri'] ?>"><?php echo $pageData['themeLabel'] ?></a> <span>|</span>
 <?php } ?>
 <?php if ((isset($pageData['typeLabel'])) && ($pageData['typeLabel'])) { ?>
-<?php echo $this->translate('#Age:') ?> <a href=""><?php echo $pageData['typeLabel'] ?></a>
+<?php echo $this->translate('#Age:') ?> <a href="<?php echo $this->translate('/editions') ?>/<?php echo $pageData['sanitizedTypeLabel'] ?>"><?php echo $pageData['typeLabel'] ?></a>
 <?php } ?>
 </div>
 <!-- /detalhes -->
