editions of serie

--- a/application/modules/works/views/scripts/edition/edition-serie.phtml
+++ b/application/modules/works/views/scripts/edition/edition-serie.phtml
@@ -1,6 +1,6 @@
 <!-- outros livros -->
 <div class="detalhe clear_both">
-    Outros livros da colecao: <a href="/colecao/<?php echo $this->uri ?>"><?php echo  $this->name ?></a>
+    <?php echo $this->translate("#Other books from the collection:") ?> <a href="<?php echo $this->translate("/serie") ?>/<?php echo $this->uri ?>"><?php echo  $this->name ?></a>
 </div>
 
 <table id="livros" width="580px">
