--- a/application/layouts/inner_books.phtml
+++ b/application/layouts/inner_books.phtml
@@ -4,6 +4,7 @@
   $controller->setParam('outerModule', $request->getModuleName());
   $params = $controller->getParams();
 ?>
+<script type="text/javascript" src="/js/jquery.pajinate.js"></script>
 
 <!-- header -->
 <?php echo $this->action('header', 'include', 'includes') ?>
