--- a/application/modules/works/views/scripts/index/index.phtml
+++ b/application/modules/works/views/scripts/index/index.phtml
@@ -1,6 +1,28 @@
 <?php
 $pageData = $this->pageData;
 ?>
+<script type="text/javascript">
+    $(document).ready(function(){
+
+            $('#page_container').pajinate({
+					num_page_links_to_display : 13,
+					items_per_page : 5,
+                                        nav_label_first: '<?php echo $this->translate("#First") ?>',
+                                        nav_label_prev: '<?php echo $this->translate("#Prev") ?>',
+                                        nav_label_last: '<?php echo $this->translate("#Last") ?>',
+                                        nav_label_next: '<?php echo $this->translate("#Next") ?>',
+                                        nav_label_info: '<?php echo $this->translate("#Showing {0}-{1} of {2} results") ?>'
+				});
+
+        $('.page_link').on('click', function(e) {
+            e.preventDefault();
+            jQuery('html, body').animate({scrollTop: top}, 800);
+
+        return false;
+        });
+    });
+</script>
+
 <!-- conteudo -->
 <div id="conteudo" style="width:580px;">
 
@@ -59,9 +81,19 @@ $pageData = $this->pageData;
 
 ?>
 
-<table id="livros" width="580px">
-    <?php echo $this->editionsRows($pageData['editionsModel']) ?></tr>
-</table>
+<!--<table id="livros" width="580px">-->
+<div id="page_container">
+<div id="livros" style="width:580px">
+<ul class="content">
+    <?php echo $this->editionsRows($pageData['editionsModel']) ?>
+</ul>
+</div>
+<!-- paginacao -->
+<div class="page_navigation"></div>
+<div class="info_text"></div>
+<!-- /paginacao -->
+</div>
+<!--</table>-->
 <?php
     } else {
 
