--- a/application/modules/works/views/scripts/index/index.phtml
+++ b/application/modules/works/views/scripts/index/index.phtml
@@ -6,7 +6,7 @@ $pageData = $this->pageData;
 
             $('#page_container').pajinate({
 					num_page_links_to_display : 13,
-					items_per_page : 5,
+					items_per_page : 3,
                                         nav_label_first: '<?php echo $this->translate("#First") ?>',
                                         nav_label_prev: '<?php echo $this->translate("#Prev") ?>',
                                         nav_label_last: '<?php echo $this->translate("#Last") ?>',
@@ -90,7 +90,7 @@ $pageData = $this->pageData;
 </div>
 <!-- paginacao -->
 <div class="page_navigation"></div>
-<div class="info_text"></div>
+<!--<div class="info_text"></div>-->
 <!-- /paginacao -->
 </div>
 <!--</table>-->
