--- a/application/modules/includes/views/scripts/include/categories.phtml
+++ b/application/modules/includes/views/scripts/include/categories.phtml
@@ -1,9 +1,9 @@
 <!-- box livros -->
-<h2>Categorias</h2>
+<h2><?php echo $this->translate("#Categories") ?></h2>
 
 <!-- item de repeticao -->
 <div class="item_box">
-<h3 class="categorias"><a href="">Imprensa</a></h3>
+<h3 class="categorias"><a href=""><?php echo $this->translate("#In the press") ?></a></h3>
 </div>
 <!-- /item de repeticao -->
 
