ajustes busca e outras coisas...

--- a/application/modules/includes/views/scripts/include/filter-themes.phtml
+++ b/application/modules/includes/views/scripts/include/filter-themes.phtml
@@ -1,2 +1,1 @@
-
-<option value="<?php echo $this->id ?>"><?php echo $this->term ?></option>
+<option value="<?php echo $this->uri ?>"><?php echo $this->term ?></option>
