--- a/application/layouts/inner_home.phtml
+++ b/application/layouts/inner_home.phtml
@@ -19,9 +19,9 @@
 <div id="banner-fade">
 
 <ul class="bjqs">
-  <li><a href="/livros"><img src="img/banner01.jpg" title="Automatically generated caption"></a></li>
-  <li><a href="/biografia"><img src="img/banner02.jpg" title="Automatically generated caption"></a></li>
-  <li><a href="/novidades"><img src="img/banner03.jpg" title="Automatically generated caption"></a></li>
+  <li><a href="/livros"><img src="img/banner01.jpg" title="Amigos da bola"></a></li>
+  <li><a href="/biografia"><img src="img/banner02.jpg" title="Biblioteca de São Paulo recebe Ruth Rocha"></a></li>
+  <li><a href="/novidades"><img src="img/banner03.jpg" title="Almanaque Ruth Rocha"></a></li>
 </ul>
 
 </div>
