posts by category

--- a/application/layouts/inner_novidades.phtml
+++ b/application/layouts/inner_novidades.phtml
@@ -25,6 +25,7 @@
 
 <!-- lateral -->
 <div id="lateral">
+<div class="box clearfix"><?php echo $this->action('blog-filter', 'include', 'includes') ?></div>
 <div class="box clearfix"><?php echo $this->action('filter', 'include', 'includes') ?></div>
 <div class="box clearfix"><?php echo $this->action('search', 'include', 'includes') ?></div>
 </div>
