--- a/application/modules/admin/views/scripts/panel/panel.phtml
+++ b/application/modules/admin/views/scripts/panel/panel.phtml
@@ -1,8 +1,8 @@
 <div class='panel'>
     <p><a href="/admin/edition/create"><?php print $this->translate("#New Book") ?></a> |
-    <a href="/admin/index/list-works"><?php print $this->translate("#List works") ?></a></p>
-    <p><a href="/admin/post/create"><?php print $this->translate("#New Post") ?></a> |
-    <a href="/admin/index/list-posts"><?php print $this->translate("#List posts") ?></a></p>
-    <a href="/auth/logout"><?php print $this->translate("#Logout") ?></a>
+    <a href="/admin/index/list-works"><?php print $this->translate("#List works") ?></a> |
+    <a href="/admin/post/create"><?php print $this->translate("#New Post") ?></a> |
+    <a href="/admin/index/list-posts"><?php print $this->translate("#List posts") ?></a> |
+    <a href="/auth/logout"><?php print $this->translate("#Logout") ?></a></p>
 </div>
 
