--- a/public/css/estilo.css
+++ b/public/css/estilo.css
@@ -92,7 +92,7 @@ a, a:visited {
 	text-decoration:none;
 	}
 	
-.admin a, .admin a:visited {
+.admin a {
 	color:#aaaaaa;
 	text-decoration:none;
 	}
@@ -449,12 +449,13 @@ li.ui-menu-item a {
 /* TABLES */
 table {
 	width:100%;
+	clear:both;
 	}
 
-td {
-	border:none;
-	padding:0;
-	text-align:center;
+td, th {
+	border:1px solid #f1f1f2;
+	border-bottom:1px dotted #ddd;
+	padding:5px;
 	}
 
 tr {
@@ -472,6 +473,11 @@ input[type=text] {
 	padding:5px 10px;
 	width:380px;
 	margin:0 0 15px 0;
+	}
+	
+.admin input[type=text]  {
+	background:#ccc!important;
+	border:none;
 	}
 
 input.pequeno {
@@ -494,6 +500,10 @@ input[type=submit], input[type=button] {
 	border:none;
 	border-top:10px solid #0ba219;
 	cursor:pointer;
+	}
+	
+.admin input[type=password]  {
+	background:#ccc!important;
 	}
 
 .novidades input[type=submit], .novidades input[type=button] {
@@ -526,6 +536,11 @@ input[type=submit]:hover, input[type=button]:hover {
 .contato input[type=submit]:hover, .contato input[type=button]:hover {
 	background:#e2a715!important;
 	}
+	
+.admin input[type=submit], .admin input[type=button] {
+	background:#ccc!important;
+	border-top-color:#aaa!important;
+	}
 
 label {
 	display:block;
@@ -535,7 +550,7 @@ label {
 	}
 
 select {
-        border:1px solid #eaeabb;
+    border:1px solid #eaeabb;
 	background:#eaeabb;
 	padding:5px 10px;
 	width:400px;
@@ -549,6 +564,11 @@ select.pequeno {
 select.medio {
 	width:100px;
 	}
+	
+.admin select {
+	background:#ccc!important;
+	border:none;
+	}
 
 option {
 	padding:0 5px;
@@ -561,6 +581,11 @@ textarea {
 	padding:5px 10px;
 	width:380px;
 	margin:0 0 15px 0;
+	}
+	
+.admin textarea {
+	background:#ccc!important;
+	border:none;
 	}
 
 .box input[type=text] {
@@ -857,7 +882,7 @@ div.dataTables_filter {
 	clear:both;
 	width:100%;
 	height:333px;
-/*	position:absolute;*/
+	position:absolute;
 	z-index:0;
 	bottom:0;
 	}
